[sprint_2] crud for Genre
