# swagger.yaml
@@ -10,6 +10,8 @@ tags:
     description: "All about authors"
   - name: "publisher"
     description: "All about publishers"
+  - name: "genre"
+    description: "All about genres"
 schemes:
   - "https"
 paths:
@@ -421,6 +423,115 @@ paths:
         "400":
           description: "Invalid name value"
 
+  /genres:
+    get:
+      tags:
+        - "genre"
+      summary: "Show all genres"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Genre"
+        "405":
+          description: "Invalid input"
+
+    post:
+      tags:
+        - "genre"
+      summary: "Add a new genre to the store"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Genre object that needs to be added to the store"
+          required: true
+          schema:
+            $ref: "#/definitions/Genre"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Genre"
+        "405":
+          description: "Invalid input"
+
+    put:
+      tags:
+        - "genre"
+      summary: "Update a genre to the store"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Genre object that needs to be updated to the store"
+          required: true
+          schema:
+            $ref: "#/definitions/Genre"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Genre"
+        "405":
+          description: "Invalid input"
+
+  /genres/{genreID}:
+    get:
+      tags:
+        - "genre"
+      summary: "Find genre by ID"
+      description: "Returns a single genre"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "genreID"
+          in: "path"
+          description: "ID of genre to return"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Genre"
+        "404":
+          description: "Author not found"
+
+    delete:
+      tags:
+        - "genre"
+      summary: "Delete a genre"
+      description: ""
+      produces:
+        - "application/json"
+      parameters:
+        - name: "genreID"
+          in: "path"
+          description: "Genre id to delete"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "404":
+          description: "Book not found"
+
 definitions:
   Book:
     type: "object"
@@ -446,6 +557,11 @@ definitions:
       publicationYear:
         type: "integer"
         format: "int64"
+      genres:
+        type: "array"
+        items:
+          $ref: "#/definitions/Genre"
+
   Author:
     type: "object"
     properties:
@@ -468,6 +584,11 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/Book"
+      genres:
+        type: "array"
+        items:
+          $ref: "#/definitions/Genre"
+
   Publisher:
     type: "object"
     properties:
@@ -481,6 +602,16 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/Book"
+
+  Genre:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+        format: "byte"
 
 externalDocs:
   description: "Find out more about Swagger"
